# Geochemistrypi

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  LICENSE  README.md  e -i 607741a  e -i e6bb5a8~4  elements_ratio_map.py  package.json  pyproject.toml  regression.py  requirements.txt  test.py
.github/: CODEOWNERES
.github/workflows/: geochemistrypi.yml  geochemistrypy.yml
GeoChemistryPy/: global_variable.py
GeoChemistryPy/client/: main.py
GeoChemistryPy/client/dataset/: Data_Classification.xlsx  Data_Clustering.xlsx  ~$Data_Regression.xlsx
GeoChemistryPy/client/output/: Clustering Results - KMeans.xlsx  Clustering Results - None.xlsx  KMeans.xlsx
GeoChemistryPy/core/: base.py
GeoChemistryPy/data/: data_readiness.py  feature_engineering.py
GeoChemistryPy/model/: classification.py  clustering.py  regression.py
GeoChemistryPy/plot/: geochemistry_plot.py  map_plot.py  statistic_plot.py
GeoChemistryPy/plot/geochemistry_plot/: elements_ratio_map.py
GeoChemistryPy/process/: classify.py  cluster.py  decompose.py  reduct.py  regress.py
GeoChemistryPy/utils/: base.py  exceptions.py
algorithm/: model.xmind
algorithm/GeoChemistryPy/: global_variable.py
algorithm/GeoChemistryPy/client/: main.py
algorithm/GeoChemistryPy/data/: data_readiness.py
algorithm/GeoChemistryPy/model/: regression.py
algorithm/GeoChemistryPy/plot/: statistic_plot.py
algorithm/GeoChemistryPy/process/: regress.py
docs/: Makefile  README.md
docs/source/: Installation.md  User Guide.md  conf.py  contact us.rst  contributing.rst  deployment.rst  index.rst  model example.rst
docs/source/Contact us/: Join us.md  Q&A.md  bug_template.md
docs/source/Contributing/: Code Conduct.md  Contributor.md
docs/source/Developer/: Docker Deployment.md  Git.md
docs/source/For Developer/: A Completed Pull Request.md  Add New Model To Framework.md  Common Operations in Sphinx.md  Developer Docs link.md  EXE Packaging Process.md  Project packaging process.md  Sphinix Guiding Book.md  Sphinx introduction.md
docs/source/For Developer/Contributing/: Contributor.md  (+2 more)
docs/source/For User/: EXE Installation and Operation Guide.md  Installation Manual.md  User Docs link.md  User Guide.md
docs/source/Home/: CHANGELOG.md  Introduction.md
docs/source/Introduction/: Introduction.md
docs/source/python_apis/: api.rst  geochemistrypi.auth.rst  geochemistrypi.data_mining.data.rst  geochemistrypi.data_mining.model.func.algo_abnormaldetection.rst  geochemistrypi.data_mining.model.func.algo_anomalydetection.rst  geochemistrypi.data_mining.model.func.algo_classification.rst  geochemistrypi.data_mining.model.func.algo_clustering.rst  geochemistrypi.data_mining.model.func.algo_decomposition.rst  geochemistrypi.data_mining.model.func.algo_regression.rst  geochemistrypi.data_mining.model.func.rst  geochemistrypi.data_mining.model.rst  geochemistrypi.data_mining.plot.rst  geochemistrypi.data_mining.process.rst  geochemistrypi.data_mining.rst  geochemistrypi.data_mining.tests.rst  geochemistrypi.data_mining.tests.test_data.rst  geochemistrypi.data_mining.utils.rst  geochemistrypi.rst  modules.rst
docs/source/static/: custom.css  dify.js
geochemistrypi/: __init__.py  _version.py  cli.py  database.py  dependencies.py  global_variable.py  main.py  start_cli_pipeline.py  start_dash_pipeline.py
geochemistrypi/auth/: __init__.py  config.py  constants.py  dependencies.py  models.py  router.py  schemas.py  service.py  sql_models.py  utils.py
geochemistrypi/backend/: start.py
geochemistrypi/backend/app/: api.py
geochemistrypi/client/: main.py
geochemistrypi/data/: data_readiness.py  statistic.py
geochemistrypi/data_mining/: UI.py  __init__.py  cli_pipeline.py  constants.py  dash_pipeline.py  enum.py  global_variable.py  pipeline.py  router.py  schemas.py  service.py  sql_models.py
geochemistrypi/data_mining/bat/: geochemistrypi.bat  latestversion_installer.bat  pre-installer.bat  setup_env.bat
geochemistrypi/data_mining/data/: data_readiness.py  feature_engineering.py  imputation.py  inference.py  preprocessing.py  statistic.py
geochemistrypi/data_mining/model/: __init__.py  _base.py  classification.py  clustering.py  decomposition.py  detection.py  network.py  regression.py
geochemistrypi/data_mining/plot/: geochemistry_plot.py  map_plot.py  statistic_plot.py
geochemistrypi/data_mining/process/: _base.py  classify.py  cluster.py  decompose.py  detect.py  network.py  regress.py
geochemistrypi/data_mining/update/: anaconda_checker.py  base.py
geochemistrypi/data_mining/utils/: base.py  exceptions.py  mlflow_utils.py  toggle_address_status.py
geochemistrypi/frontend/: .babelrc  .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierrc.js  .prettierrc.json  README.md  auto-imports.d.ts  components.d.ts  eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.js  webpack.config.js
geochemistrypi/frontend/public/: index.html
geochemistrypi/frontend/src/: App.tsx  App.vue  index.tsx  main.js  main.ts
geochemistrypi/model/: _base.py  clustering.py  regression.py
geochemistrypi/model/func/: __init__.py
geochemistrypi/plot/: geochemistry_plot.py  map_plot.py
geochemistrypi/process/: classify.py
geochemistrypy/: .gitignore  global_variable.py
geochemistrypy/client/: main.py  tmp.py
geochemistrypy/client/dataset/: .~Data_Regression.xlsx  Data_Clustering.xlsx  Data_Decomposition.xlsx
geochemistrypy/client/output/: KMeans.xlsx
geochemistrypy/data/: data_readiness.py  feature_engineering.py  imputation.py  statistic.py
geochemistrypy/model/: __init__.py  _base.py  classification.py  clustering.py  decomposition.py  regression.py
geochemistrypy/plot/: geochemistry_plot.py  map_plot.py  statistic_plot.py
geochemistrypy/process/: classify.py  cluster.py  decompose.py  regress.py
geochemistrypy/tests/: __init__.py
geochemistrypy/tests/test_data/: test_data_readiness.py
geochemistrypy/utils/: Delegate.py  __init__.py  base.py  exceptions.py
requirements/: development.txt  production.txt
(+138 files in other folders)
