[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geochemistrypi"
version = "0.4.0"
authors = [
  { name="Can He", email="sanyhew1097618435@163.com" },
]
maintainers = [] 
description = "A highly automated machine learning Python framework for data-driven geochemistry discovery"
readme = "README.md"
license = { file="LICENSE" }
requires-python = "~=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "typer==0.7.0",
    "ray==2.2.0",
    "ray[tune]",
    "optuna",
    "pydantic<2.0.0",
    "scikit-learn==1.1.3",
    "seaborn==0.11.0",
    "multipledispatch==0.6.0",
    "statsmodels==0.13.2",
    "scipy",
    "openpyxl==3.0.10",
    "pandas==1.5.2",
    "joblib==1.2.0",
    "flaml==1.0.14",                # required to run Xgboost + FLMAL
    "numpy==1.23.5",                # required to run Xgboost + FLMAL
    "xgboost==1.6.2",               # required to run Xgboost + FLAML and be compatible with M2 chip on Mac
    "threadpoolctl==3.1.0",         # required to draw 3d plot for KMeans
    "matplotlib==3.5.2",            # required to draw 3d plot for KMeans
    "fastapi",                      # backend framework
    "uvicorn",                      # required to run uvicorn
    "python-multipart",             # required to run uvicorn
    "dash",                         # required to run dash
    "sqlalchemy",                   # required to run sqlalchemy
    "passlib",                      # required to run passlib
    "python-jose[cryptography]",    # required to run python-jose
    "bcrypt",                       # required to run bcrypt
    "python-dotenv",                # required to run python-dotenv
    "rich",                         # color print
    "mlflow",                       # required to run mlflow
    "imblearn",
]

[tool.black]
line-length = "200"

[tool.isort]
line_length = "200"
profile = "black"

[tool.flake8]
max-line-length = "200"
max-complexity = "20"
ignore = "F811,W605"

[project.optional-dependencies]
test = [
    "pytest"
]

[project.urls]
"Homepage" = "https://github.com/ZJUEarthData/geochemistrypi"
"Bug Tracker" = "https://github.com/ZJUEarthData/geochemistrypi/issues"
"Online Documentation" = "https://geochemistrypi.readthedocs.io/en/latest/"

[project.scripts]
geochemistrypi = "geochemistrypi.cli:app"
