[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geochemistrypi"
version = "0.7.0"
authors = [
  { name="Can He", email="sanyhew1097618435@163.com"},
  { name="Jianhao Sun", email="sjh20171502@gmail.com"},
  { name="Jianming Zhao", email="zhaojianming@zju.edu.cn"},
  { name="Yang Lyu", email="lyuyang1007@zju.edu.cn"}
]
maintainers = [
  { name="Can He", email="sanyhew1097618435@163.com"},
  { name="Jianhao Sun", email="sjh20171502@gmail.com"},
  { name="Jianming Zhao", email="zhaojianming@zju.edu.cn"},
  { name="Yongkang Shan", email="kk1361207571@163.com"}
]
description = "A highly automated machine learning Python framework dedicating to build up MLOps level 1 software product for data-driven geochemistry discovery"
keywords = ["Geochemistry π", "Automated", "Machine Learning", "MLOps", "Geochemistry Discovery", "Continuous Training", "Machine Learning Lifecycle Management", "Model Inference", "Data Mining"]
readme = "README.md"
license = { file="LICENSE" }
requires-python = "~=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "typer==0.7.0",
    "ray==2.2.0",
    "ray[tune]",
    "optuna",
    "pydantic<2.0.0",
    "scikit-learn==1.1.3",
    "seaborn==0.11.0",
    "multipledispatch==0.6.0",
    "statsmodels==0.13.2",
    "scipy",
    "openpyxl==3.0.10",
    "pandas==1.5.2",
    "joblib==1.2.0",
    "flaml==1.0.14",                # required to run XGBoost + FLMAL
    "numpy==1.23.5",                # required to run XGBoost + FLMAL
    "xgboost==1.6.2",               # required to run XGBoost + FLAML and be compatible with M2 chip on Mac
    "threadpoolctl==3.1.0",         # required to draw 3d plot for KMeans
    "matplotlib==3.5.2",            # required to draw 3d plot for KMeans
    "fastapi",                      # backend framework
    "uvicorn",                      # required to run uvicorn
    "python-multipart",             # required to run uvicorn
    "dash",                         # required to run dash
    "sqlalchemy",                   # required to run sqlalchemy
    "passlib",                      # required to run passlib
    "python-jose[cryptography]",    # required to run python-jose
    "bcrypt",                       # required to run bcrypt
    "python-dotenv",                # required to run python-dotenv
    "rich",                         # color print
    "mlflow",                       # required to run mlflow
    "imblearn",
]

[project.optional-dependencies]
test = [
    "pytest"
]

[project.urls]
"Homepage" = "https://geochemistrypi.deep-time.org"
"GitHub" = "https://github.com/ZJUEarthData/geochemistrypi"
"Bug Tracker" = "https://github.com/ZJUEarthData/geochemistrypi/issues"
"Online Documentation" = "https://geochemistrypi.readthedocs.io/en/latest/"

[project.scripts]
geochemistrypi = "geochemistrypi.cli:app"
